Configured a standardised parameter run mode to make comparing data reasonable.